[gd_scene load_steps=2 format=3 uid="uid://dyaifyf1w67pv"]

[ext_resource type="Script" uid="uid://dhhfwro8t6gpo" path="res://gameplay/enemies/ai/ai_travel_probe.gd" id="1_thx04"]

[node name="AITravelProbe" type="Node3D"]
script = ExtResource("1_thx04")

[node name="Probe_Handle" type="Node3D" parent="."]

[node name="AvoidRays" type="Node3D" parent="Probe_Handle"]

[node name="RayCast_UpLeft" type="RayCast3D" parent="Probe_Handle/AvoidRays"]
transform = Transform3D(-0.8660253, -0.43301278, 0.2500001, 1.4901161e-08, -0.50000006, -0.8660254, 0.50000006, -0.74999994, 0.4330128, 0, 0, 0)
target_position = Vector3(0, 10, 0)
collision_mask = 327936
hit_from_inside = true
hit_back_faces = false
debug_shape_thickness = 5

[node name="RayCast_UpRight" type="RayCast3D" parent="Probe_Handle/AvoidRays"]
transform = Transform3D(-0.86602545, 0.43301263, -0.25, -1.4901161e-08, -0.50000006, -0.8660254, -0.49999994, -0.75, 0.43301284, 0, 0, 0)
target_position = Vector3(0, 10, 0)
collision_mask = 327936
hit_from_inside = true
hit_back_faces = false
debug_shape_thickness = 5

[node name="RayCast_DownLeft" type="RayCast3D" parent="Probe_Handle/AvoidRays"]
transform = Transform3D(-0.8660253, -0.43301275, -0.25000003, -1.9963773e-09, 0.5, -0.8660254, 0.5000001, -0.75000006, -0.43301275, 0, 0, 0)
target_position = Vector3(0, 10, 0)
collision_mask = 327936
hit_from_inside = true
hit_back_faces = false
debug_shape_thickness = 5

[node name="RayCast_DownRight" type="RayCast3D" parent="Probe_Handle/AvoidRays"]
transform = Transform3D(-0.86602545, 0.43301263, 0.24999996, 1.9963755e-09, 0.5, -0.8660254, -0.49999997, -0.7500001, -0.4330128, 0, 0, 0)
target_position = Vector3(0, 10, 0)
collision_mask = 327936
hit_from_inside = true
hit_back_faces = false
debug_shape_thickness = 5

[node name="CenteringRays" type="Node3D" parent="Probe_Handle"]

[node name="RayCast_Up" type="RayCast3D" parent="Probe_Handle/CenteringRays"]
transform = Transform3D(0.99999994, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
target_position = Vector3(0, 10, 0)
collision_mask = 327936
hit_from_inside = true
hit_back_faces = false
debug_shape_thickness = 5

[node name="RayCast_Down" type="RayCast3D" parent="Probe_Handle/CenteringRays"]
transform = Transform3D(-0.99999994, -8.742278e-08, 0, 8.742277e-08, -1, 0, 0, 0, 1, 0, 0, 0)
target_position = Vector3(0, 10, 0)
collision_mask = 327936
hit_from_inside = true
hit_back_faces = false
debug_shape_thickness = 5

[node name="RayCast_Right" type="RayCast3D" parent="Probe_Handle/CenteringRays"]
transform = Transform3D(-4.3711385e-08, 1, 0, -0.99999994, -4.371139e-08, 0, 0, 0, 1, 0, 0, 0)
target_position = Vector3(0, 10, 0)
collision_mask = 327936
hit_from_inside = true
hit_back_faces = false
debug_shape_thickness = 5

[node name="RayCast_Left" type="RayCast3D" parent="Probe_Handle/CenteringRays"]
transform = Transform3D(-4.3711385e-08, -1, 0, 0.99999994, -4.371139e-08, 0, 0, 0, 1, 0, 0, 0)
target_position = Vector3(0, 10, 0)
collision_mask = 327936
hit_from_inside = true
hit_back_faces = false
debug_shape_thickness = 5
